# multi-agent-memory

./: .gitignore  CHANGELOG.md  PLAN.md  TESTING.md  main.py  pyproject.toml
deploy/: agent-memory-curate.service  agent-memory-curate.timer  agent-memory.service  deploy.sh
hook/memory-sync/: HOOK.md  handler.ts
migrations/: 001_initial.sql  002_add_bm25.sql  003_drop_shared_events.sql
scripts/: backtest.py  curate.py  env.sh  init-agent-memory.sh  memory-stats.sh  pg-backup.sh  rebuild_index.py  reconcile_jsonl.py
specs/: README.md  chunking.md  config.md  duplicate-detection.md  fact-extraction.md  importance.md  jsonl-storage.md  pg-storage.md  promotion.md  recall-hybrid.md  store-memory.md  wake-up.md
src/: __main__.py  config.py  embeddings.py  server.py
src/extraction/: facts.py  importance.py  promotion.py
src/storage/: jsonl.py  postgres.py
tests/: conftest.py  helpers.py  test_chunking.py  test_config.py  test_coverage_gaps.py  test_curate.py  test_duplicate_detection.py  test_embeddings.py  test_extraction.py  test_importance.py  test_jsonl_storage.py  test_pg_storage.py  test_promotion.py  test_rebuild_index.py  test_recall_bm25.py  test_recall_hybrid.py  test_rrf.py  test_server_misc.py  test_store_memory.py  test_wake_up.py
