[project]
name = "multi-agent-memory"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "einops>=0.8.2",
    "fastmcp>=3.1.1",
    "psycopg[binary]>=3.3.3",
    "sentence-transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
