[project]
name = "multi-agent-memory"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "einops>=0.8.2",
    "fastmcp>=3.1.1",
    "psycopg[binary]>=3.3.3",
    "sentence-transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Pure logic, no I/O, no network (default)",
    "integration: Requires mocked external services (PG, NAS, LLM)",
    "e2e: Full system test against live infrastructure",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--junitxml=.test-current.xml",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]
