[project]
name = "multi-agent-memory"
version = "0.1.0"
description = "Shared memory MCP server for multi-agent systems — JSONL truth, pgvector + BM25 hybrid recall."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.95.0",
    "einops>=0.8.2",
    "fastmcp>=3.2.4",
    "psycopg[binary,pool]>=3.3.3",
    "sentence-transformers>=5.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Pure logic, no I/O, no network (default)",
    "integration: Requires mocked external services (PG, NAS, LLM)",
    "e2e: Full system test against live infrastructure",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
# Note: --junitxml is NOT in addopts. A partial test run (pytest -k foo) would
# otherwise overwrite .test-current.xml and make scripts/backtest.py report
# every other test as "removed". The backtest script drives its own junit-
# capturing pytest invocation.

[tool.coverage.run]
source = ["src"]
omit = ["src/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]
